disassociating file name and name entry in database and created GET /name endpoint
